[新增]starter (用于设置用户ID,组ID...并启动bash，同时用于存放进程nice-name) [更改]去除exec方法，将execX迁移到exec